<resources>
    <string name="app_name">WiaTalk</string>
    <string name="register_title">Inscription</string>
    <string-array name="days">
        <item>Dimanche</item>
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bienvenue sur WiaTalk.\nVeillez entrer votre numero de telephone</string>
    <string name="mobile_num_request">Un SMS contenant un code de confirmation vous sera envoyé, il vous suffira de rentrer ce code pour confirmer que votre numéro de téléphone.</string>
    <string name="validate">CONTINUER</string>
    <string name="otp_request">Un SMS contenant un code de confirmation de votre numero de telephone vous a ete envoye. Renseignez ce code</string>
    <string name="wait_sms">SMS NON RECU? ATTENDEZ</string>
    <string name="wrong_number">CHANGER DE NUMERO DE TELEPHONE</string>
    <string name="userinfos_request">Choisissez une photo de profil et un nom d\'utilisateur</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="backup_detected">Des sauvegardes de vos donnees WiaTalk ont ete trouvees. Souhaitez vous les restaurer?</string>
    <string name="no">NON</string>
    <string name="yes">OUI</string>
    <string name="restore_response_positive">La restauration s\'est terminee avec succes</string>
    <string name="restart_restore">REESSAYER</string>
    <string name="empty_mobile">Veillez entrer votre numero de telephone</string>
    <string name="invalide_mobile">Ce numero ne correspond pas aux numeros de telephone camerounais</string>
    <string name="confirm_mobile">Confirmez vous que le numero ??? est bien correcte et est le votre ?</string>
    <string name="empty_code_otp">Veillez entrer votre code de verification</string>
    <string name="request_sms">REDEMANDER LE SMS DE CONFIRMATION</string>
    <string name="processing">Veillez patienter</string>
    <string name="empty_username">S\'il vous plait entrez un nom d\'utilisateur</string>
    <string name="choose_pp">Continuer avec</string>
    <string name="profile_img_chooser_gallery">LA GALERIE</string>
    <string name="profile_img_chooser_appphoto">L\'APPAREIL PHOTO</string>
    <string name="gallery_permissions_denied">Cette application n\'a pas l\'autorisation de lire ou d\'ecrire dans la memoire</string>
    <string name="camera_permissions_denied">Cette application n\'a pas le droit de prendre des photos ou d\'ecrire dans la memoire</string>
    <string name="profile_img_chooser_gallery_title">Selectionnez votre photo de profile dans la gallerie</string>
    <string name="newgroup">Nouveau groupe</string>
    <string name="myprofile">Mon profile</string>
    <string name="contacts">Mes contacts</string>
    <string name="marked_messages">Messages importants</string>
    <string name="settings">Parametres</string>
    <string name="others">Autres</string>
    <string name="share">Partager l\'application</string>
    <string name="help">Aide</string>
    <string name="report">Signaler un probleme</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_calls">Appels</string>
    <string name="open_drawer">Ouvrir Menu</string>
    <string name="close_drawer">Fermer Menu</string>
    <string name="no_message_message">Vous n\'avez aucune discussion en cours. Appuyez sur le bouton en bas a droite pour commencer a echanger avec vos contacts</string>
    <string name="no_calls_message">Vous n\'avez ni passé ni reçu aucun appel. Appuyez sur le bouton en bas à droite pour lancer un appel</string>
    <string name="number_items">\??? discussions</string>
    <string name="yesterday">Hier</string>
    <string name="pin_discussion">Epingler la discussion</string>
    <string name="delete_discussion">Supprimer la discussion</string>
    <string name="clear_discussion">Vider la discussion</string>
    <string name="message_hint">Message</string>
    <string name="empty">Vider la discussion</string>
    <string name="search">Rechercher</string>
    <string name="reply">Repondre</string>
    <string name="copy">Copier</string>
    <string name="forward">Partager</string>
    <string name="delete">Supprimer</string>
    <string name="file_chooser">Envoyer un fichier</string>
    <string name="camera">Camera</string>
    <string name="gallery">GALERIE</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="file">Fichier</string>
    <string name="document">Document</string>
    <string name="documents_activity">Documents</string>
    <string name="audios_activity">Fichiers Audio</string>
    <string name="gallery_name">Galerie</string>
    <string name="legend">Un commentaire</string>
    <string name="recording">Enregistrement...</string>
    <string name="invitefriends">Inviter mes contacts sur WiaTalk</string>
    <string name="no_contacts_in_wiatalk">Aucun de vos contacts n\'est sur WiaTalk.\nInvitez vos contacts a vous rejoindre sur WiaTalk en cliquant sur le bouton ci-dessus.</string>
    <string name="no_contacts_in_wiatalk_label">Aucun contact trouvé</string>
    <string name="contacts_label">Contacts</string>
    <string name="number_added">\??? sur 500</string>
    <string name="added_members">Membres ajoutés</string>
    <string name="groupname">Nom du groupe</string>
    <string name="group_files">Fichiers du groupe</string>
    <string name="group_members_label">Membres du groupe</string>
    <string name="quit_group">Quitter le groupe</string>
    <string name="ib_files">Fichiers partagés</string>
    <string name="common_groups_label">Groupes en communs</string>
    <string name="edit_group_name">Nouveau nom pour le groupe</string>
    <string name="edit_pseudo">Nouveau pseudo</string>
    <string name="settings_notifications">Recevoir les notifications</string>
    <string name="auto_download_photos">Telechargement automatique des photos</string>
    <string name="auto_download_videos">Telechargement automatique des videos</string>
    <string name="auto_download_audios">Telechargement automatique des fichiers audios</string>
    <string name="auto_download_documents">Telechargement automatique des documents</string>
    <string name="auto_download">Telechargement automatique de tous les fichiers (videos, audios, photos, documents)</string>
    <string name="data_storage_label">Donnees et stockage</string>
    <string name="notifications_label">Notifications</string>
    <string name="storage_data">Stocker vos donnees utilisateurs en local (messages, groupes, historiques des appels etc...)</string>
    <string name="save_restore_label">Sauvegarde et restauration</string>
    <string name="local_save">Effectuer une sauvegarde en local</string>
    <string name="cloud_save">Effectuer une sauvegarde sur le cloud</string>
    <string name="save_restore_explain">Sauvegarde de vos donnees (messages, groupes, historiques d\'appels, etc... pour une restauration en cas de perte de votre telephone ou en cas de reinstallation de l\'application</string>
    <string name="edit_mobile_explain">Entrez votre ancien numero, puis le nouveau numero que vous souhaitez utiliser</string>
    <string name="mobile_num_request_for_edit">Un SMS contenant un code de confirmation vous sera envoyé, il vous suffira de rentrer ce code pour confirmer que votre nouveau numéro de téléphone.</string>
    <string name="old_mobile">Ancien numero de telephone</string>
    <string name="new_mobile">Nouveau numero de telephone</string>
    <string name="vocal_call">Appel vocal</string>
    <string name="video_call">Appel Video</string>
    <string name="add_members">Ajouter des members</string>
    <string name="edit_mobile">Modifier le numero de telephone</string>
    <string name="empty_old_mobile">Entrez votre ancien numero de telephone</string>
    <string name="empty_new_mobile">Veillez entrer votre nouveau numero de telephone</string>
    <string name="incorrect_mobile_num">Ce numero de telephone n\'est pas le votre</string>
    <string name="view_profile">Voir le profile de ????</string>
    <string name="nominate_admin">Nommer ???? en tant qu\'administrateur</string>
    <string name="remove_member">Retirer ???? du groupe</string>
    <string name="message_to">Message a ????</string>
    <string name="vocal_call_to">Appel vocal a ????</string>
    <string name="video_call_to">Appel Video a ????</string>
    <string name="pleasewait">Please wait</string>
    <string name="init_app">Initialisation de l\'application</string>
    <string name="read_contacts_permissions_denied">Permissions refusee lecture de contacts</string>
    <string name="loading_contacts">Chargement des contacts</string>
    <string name="refresh">Actualiser</string>
    <string name="loading">Veillez patienter</string>
    <string name="change_pp">Changer la photo de profile</string>
    <string name="edit_group_name_menu">Changer le nom du groupe</string>
    <string name="goback">Annuler</string>
    <string name="edit">Modifier</string>
    <string name="change_group_name">Changer le nom du groupe</string>
    <string name="remove_pp">Supprimer la photo</string>
    <string name="group_creation_date">Cree le ????? par ????</string>
    <string name="group_creation_message">\???? a créé le groupe ?????</string>
    <string name="add_member_message">\????? a ajouté ????</string>
    <string name="remove_member_message">\????? a retiré ????</string>
    <string name="add_admin_message">\????? est maintenant administrateur</string>
    <string name="change_group_name_message">\?????? a changé le nom du groupe de ????? en ????</string>
    <string name="change_pp_message">\????? a changé la photo de profil du groupe</string>
</resources>
