<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/change_pp"
        android:title="@string/change_pp"
        android:icon="@drawable/ic_edit_menu"
        app:showAsAction="always"></item>
    <item android:id="@+id/remove_pp"
        android:title="@string/remove_pp"
        app:showAsAction="never"></item>
    <item android:id="@+id/edit_group_name"
        android:title="@string/edit_group_name_menu"
        app:showAsAction="never"></item>
    <item android:id="@+id/group_files"
        android:title="@string/group_files"
        app:showAsAction="never"></item>
    <item android:id="@+id/quit"
        android:title="@string/quit_group"
        app:showAsAction="never"></item>
</menu>