<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/reply"
        android:title="@string/reply"
        app:showAsAction="always"
        android:icon="@drawable/ic_reply"/>
    <item android:id="@+id/copy"
        android:title="@string/copy"
        app:showAsAction="always"
        android:icon="@drawable/ic_content_copy"/>
    <item android:id="@+id/forward"
        android:title="@string/forward"
        app:showAsAction="always"
        android:icon="@drawable/ic_arrow_forward_white"/>
    <item android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_white"/>
</menu>