<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ensp.reseau.wiatalk.ui.fragment.EditMobileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padmarg_small">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/edit_mobile_explain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mobile_num_request_for_edit"
            android:layout_marginTop="@dimen/padmarg_small"
            android:textColor="@color/darkgrey"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padmarg_big"
            android:inputType="phone"
            android:hint="@string/old_mobile"
            android:gravity="center_horizontal"
            android:id="@+id/old_mobile"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padmarg_medium"
            android:inputType="phone"
            android:hint="@string/new_mobile"
            android:gravity="center_horizontal"
            android:id="@+id/new_mobile"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RaisedButtons"
            android:layout_gravity="center_horizontal"
            android:text="@string/validate"
            android:textColor="@color/white"
            android:id="@+id/next"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/padmarg_medium"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
