<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ensp.reseau.wiatalk.ui.fragment.AdminsOptionsBottomSheetFragment"
    android:orientation="vertical"
    android:paddingTop="@dimen/padmarg_small"
    android:paddingBottom="@dimen/padmarg_small">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/darkgrey"
        android:text="@string/message_hint"
        android:id="@+id/message" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/darkgrey"
        android:layout_marginTop="@dimen/padmarg_small"
        android:text="@string/view_profile"
        android:id="@+id/view_profile" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/darkgrey"
        android:text="@string/nominate_admin"
        android:layout_marginTop="@dimen/padmarg_small"
        android:id="@+id/nominate_admin" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/darkgrey"
        android:layout_marginTop="@dimen/padmarg_small"
        android:text="@string/remove_member"
        android:id="@+id/remove_member" />

</LinearLayout>
