<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padmarg_small"
    tools:context="ensp.reseau.wiatalk.ui.fragment.RegisterOtpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/otp_request"
        android:layout_marginTop="@dimen/padmarg_small"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padmarg_medium"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/wait_sms"
        android:id="@+id/request_sms"
        android:layout_gravity="center_horizontal"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padmarg_small"
        android:inputType="phone"
        android:text="123-456"
        android:gravity="center_horizontal"
        android:id="@+id/otp"
        android:hint="XXX-XXX"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padmarg_small"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/back"
        android:text="@string/wrong_number"
        android:textColor="@color/colorPrimaryDark"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/RaisedButtons"
        android:layout_gravity="center_horizontal"
        android:text="@string/validate"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/next"
        android:layout_marginTop="@dimen/padmarg_small"/>

</LinearLayout>
