<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padmarg_small"
    android:orientation="vertical"
    tools:context="ensp.reseau.wiatalk.ui.fragment.RegisterRestoreFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_detected"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/padmarg_small"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padmarg_big">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/answer_container">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/no"
                android:id="@+id/no"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/yes"
                android:textStyle="bold"
                android:id="@+id/yes"
                android:layout_marginLeft="@dimen/padmarg_medium"/>

        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:progress="56"
            android:secondaryProgress="80"
            android:id="@+id/restore_progress"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/response_container"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_response_positive"
                android:gravity="center_horizontal"
                android:id="@+id/restore_response"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padmarg_small">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/restart_restore"
                    android:id="@+id/restart"
                    android:textColor="@color/colorPrimaryDark"/>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/RaisedButtons"
                    android:padding="@dimen/padmarg_medium"
                    android:textColor="@color/white"
                    android:text="@string/validate"
                    android:textStyle="bold"
                    android:id="@+id/next"
                    android:layout_marginLeft="@dimen/padmarg_medium"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
