<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ensp.reseau.wiatalk.ui.fragment.ContactsOptionsBottomSheetFragment"
    android:paddingTop="@dimen/padmarg_small"
    android:paddingBottom="@dimen/padmarg_small">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/darkgrey"
        android:text="@string/message_hint"
        android:id="@+id/message"
        android:drawableRight="@drawable/ic_message" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/darkgrey"
        android:text="@string/vocal_call"
        android:layout_marginTop="@dimen/padmarg_small"
        android:id="@+id/vocal_call"
        android:drawableRight="@drawable/ic_call_orange" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/darkgrey"
        android:layout_marginTop="@dimen/padmarg_small"
        android:text="@string/video_call"
        android:id="@+id/video_call"
        android:drawableRight="@drawable/ic_video_call_orange" />

</LinearLayout>
