<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padmarg_small"
    tools:context="ensp.reseau.wiatalk.ui.fragment.ChoosePpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_pp"
        android:gravity="center_horizontal"
        android:textColor="@color/darkgrey"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padmarg_small">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/gallery_choice"
            android:drawableTop="@drawable/ic_photo_library_orange_48dp"
            android:text="@string/profile_img_chooser_gallery"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_weight=".50"/>

        <TextView
            android:id="@+id/camera_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:drawableTop="@drawable/ic_camera_orange_48dp"
            android:gravity="center_horizontal"
            android:text="@string/profile_img_chooser_appphoto"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
