<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padmarg_small"
    android:orientation="vertical"
    tools:context="ensp.reseau.wiatalk.ui.fragment.RegisterUserFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userinfos_request"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/padmarg_small"/>

    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/padmarg_big"
        android:layout_gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/ppwidth"
            android:layout_height="@dimen/ppheight"
            android:src="@drawable/splash"
            android:scaleType="centerCrop"
            android:id="@+id/pp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/padmarg_small"
            app:fabSize="normal"
            android:layout_marginRight="@dimen/padmarg_small"
            android:src="@drawable/ic_camera_white_48dp"
            android:id="@+id/change_pp"/>

    </RelativeLayout>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/padmarg_medium"
        android:id="@+id/username"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padmarg_medium"
        android:theme="@style/RaisedButtons"
        android:text="@string/validate"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="@dimen/padmarg_medium"
        android:id="@+id/next"/>

</LinearLayout>
