<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/pin"
        android:padding="@dimen/padmarg_medium">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_discussion"
            android:textSize="@dimen/text_big"
            android:layout_marginLeft="@dimen/padmarg_medium"
            android:textColor="@color/darkgrey"
            android:textStyle="bold"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/clear"
        android:padding="@dimen/padmarg_medium">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear_all_24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_discussion"
            android:textSize="@dimen/text_big"
            android:layout_marginLeft="@dimen/padmarg_medium"
            android:textColor="@color/darkgrey"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/delete"
        android:padding="@dimen/padmarg_medium">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_discussion"
            android:textSize="@dimen/text_big"
            android:layout_marginLeft="@dimen/padmarg_medium"
            android:textColor="@color/darkgrey"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>